--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -16,8 +16,12 @@
                   <a class="nav-link" href="/weather">Weather</a>
                 </li>
                
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                   <a class="nav-link" href="/about">About </a>
+                </li> --}}
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">Contact </a>
                 </li>
                     
               </ul>   
