--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,12 +15,12 @@
                 <div class="col-md-6 col-12 main_header_right align-items-center">
              
                     <figure>
-                        <img src="img/pexels-photo-5952647.jpeg" class="img-fluid" title=" cyphon" alt="">
+                        <img src="img/v.jpg" class="img-fluid" title=" cyphon" alt="">
                     </figure>
                     </div>
                <div class="col-md-6 col-12 main_header_left">
                   <p>Welcome to weather app</p>
-                  <h1>I am A <span class="text_clr">i a full stack developer and compettitive coder</span></h1>
+                  <h1>My Self  <span class="text_clr">VIVEK SINGH owner of cyphon-tech website created many website project</span></h1>
                    <a href="https://www.linkedin.com/in/vivek-singh-33a491188/" target="_blank"><button>About me</button></a>
              </div>           
              <!-- right side div       -->
