--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,13 @@
             <div class="row">
                 <!-- left side div  -->
                <div class="col-md-6 col-12 main_header_left">
-                   <h1>Get the latest <span class="text_clr">weather</span> info of your city</h1>
+                 <div class="holi1">
+                      <img class="holi" src="img/holi.png" alt="">
+                 {{!-- <img class="holi" src="img/holi2.gif" alt=""> --}}
+                 {{!-- <img class="h" src="img/h2.jpg" alt=""> --}}
+                 </div>
+                
+                   <h1>Get the latest <span class="text_clr">weather</span> info of your </h1>
                    <a href="/weather"><button>check now</button></a>
              </div>           
              <!-- right side div       -->
